# mathteacher

./: .env.example  .gitattributes  .gitignore  COMMANDS.md  README.md  check_chapters.py  check_classes_schema.py  check_master_role.py  check_password.py  check_users.py  coverage_report.md  create_users.py  docker-compose.yml  fix_classes_grade.py  fix_password.py  package-lock.json  remove_enums.py  remove_enums_v2.py  reset_password.py  test_error_analysis.py  test_gradual_fading.py  test_password.py  test_visual_decoding.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  coverage.xml  demo_fill_in_blank.py  diagnose_pydantic.py  manual_verify.py  pyproject.toml  requirements.txt  seed_review.txt  test_fill_in_blank_api.py
backend/alembic/: env.py
backend/alembic/versions/: 0c3f3f7c7d0c_add_retry_and_focus_check_fields.py  308d1236d496_add_composite_index_on_questions.py  330e2f2894a9_add_items_and_user_items.py  8577adedf933_add_question_reports_table.py  8b4a4804c0f4_add_blank_config_to_questions.py  a01b1107ee09_add_concept_method_and_fading_level.py  a1b2c3d4e5f6_add_daily_test_records.py  b15f2059a262_add_daily_mission_model.py  d702ba05949b_add_achievement_model.py  df2e75c68cb6_add_placement_fields_to_users.py  f680d99f3780_add_hint_column_to_questions.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  security.py
backend/app/data/: seed_db.py  (+5 more)
backend/scripts/: dedup_questions.py  seed_shop.py
backend/tests/: conftest.py  factories.py  test_health.py  verify_conceptual_logic.py  verify_phase6_backend.py
(+432 files in other folders)
